# stock

./: .dockerignore  .editorconfig  .gitignore  BUILD_RELEASE.cmd  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  INSTALL_DEV_WINDOWS.cmd  INSTALL_MOOTDX_OPTIONAL.cmd  LICENSE  MANIFEST.in  PROJECT_MANIFEST.json  README.md  RUN_TESTS.cmd  SECURITY.md  SOURCE_POLICY.md  START_WEB_WINDOWS.cmd  TEST_REPORT_V4.1.md  THIRD_PARTY_DATA_NOTICE.md  config.example.json  pyproject.toml  render.yaml  requirements-base.txt  requirements-fund.txt  requirements-market.txt  web_app.py
.github/: CODEOWNERS.example
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DATA_CONTRACTS.md  DEPLOYMENT.md  MAINTAINER_HANDOFF.md  MIGRATION_V4_TO_V4_1.md  RELEASE.md  index.html
examples/: OFFICIAL_DATA_IMPORT_FORMAT.json
optional_fund_sync/: README.md
scripts/: backup_runtime.py  bump_version.py  generate_manifest.py  package_release.py  preflight.py
src/astock_terminal/: __init__.py  app.py  models.py  utils.py
src/astock_terminal/providers/: __init__.py  a_stock_data.py  fund_eid.py  mootdx_provider.py  tencent.py
src/astock_terminal/static/: app.js  index.html  manifest.json  service-worker.js  styles.css
tests/: test_core.py  test_package_layout.py  test_server.py
